--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/public/vendor/Bootstrap/bootstrap.min.css" />
+		<link rel="stylesheet" href="/public/vendor/SwiperSlider/swiper.css" />
+		<link rel="stylesheet" href="/public/vendor/FontAwesome5/all.min.css" />
 		<title>CMS with React</title>
 	</head>
 	<body>
 		<div id="root"></div>
+		<script src="/public/vendor/Bootstrap/bootstrap.bundle.min.js"></script>
+		<script src="/public/vendor/FontAwesome5/all.min.js"></script>
 		<script type="module" src="/src/main.jsx"></script>
 	</body>
 </html>
